resolved spread bar alignment

--- a/main.sass
+++ b/main.sass
@@ -23,6 +23,7 @@ html, body {
 	  color: white;
 	  font-size: 20px;
 	  max-height: 60px;
+	  margin-bottom: 14px;
 }
 .igor {
 width: 70px;
@@ -38,4 +39,18 @@ width: 70px;
 	background-color: white;
 	height: 90px;
 	width:100%;
+}
+.spread-bar p {
+		// position: absolute;
+	text-align: center;
+	line-height: 90px;
+	color: black;
+	padding: 0;
+	margin:0;
+	max-height: 90px;
+	width:100%;
+	left: 0;
+	top: 0;
+	font-family: 'Roboto', sans-serif;
+	font-size: 25px;
 }
